--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: >
 permalink: pretty
 
 # Pagination
-# paginate: 3
-# paginate_path: "/blog/page:num"
+paginate: 4
+paginate_path: "/blog/page:num"
 
 # If you clone the Termina Plex repo and build locally, use this setting.
 # theme: termina-plex
