--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: pretty
 
 # Pagination
 paginate: 10
-paginate_path: "/blog/page:num"
+paginate_path: /blog/page:num
 
 # If you clone the Termina Plex repo and build locally, use this setting.
 # theme: termina-plex
