--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ show_excerpts: false
 termina-plex:
   date_format: "%d %b %Y"
   long_date_format: "%d %B %Y %H:%M:%S"
+  centered_tables: true
 
   username: theme
   hostname: termina-plex
