--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,13 @@ kramdown:
 # Theme-specific settings
 
 # Set to `true` to show excerpts on the homepage.
-show_excerpts: false
+show_excerpts: true
 
 # Termina Plex specific settings
 termina-plex:
   date_format: "%d %b %Y"
   long_date_format: "%d %B %Y %H:%M:%S"
-  centered_tables: true
+  centered_tables: false
 
   username: theme
   hostname: termina-plex
