Adding support for author pronouns for index layout

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Termina Plex Jekyll Theme
 author:
   name: Termina Plex
   email: your-email@domain.com
+  pronouns: they/them
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
