--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,14 @@ termina-plex:
   social_links:
     - { name: GitHub, url: "https://github.com/questionlp/termina-plex" }
     - { name: Jekyll, url: "https://jekyllrb.com" }
+
+exclude:
+  - "Gemfile"
+  - "Gemfile.lock"
+  - "node_modules"
+  - "vendor/bundle/"
+  - "vendor/cache/"
+  - "vendor/gems/"
+  - "vendor/ruby/"
+  - "*.gem"
+  - "*.gemspec"
